# pystatsinsurance

./: .gitignore  CHANGELOG.md  FIRST_FEATURES.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml
.release/: CHECKLIST.md  UNRELEASED.md  release.py
pystatsinsurance/: __init__.py
pystatsinsurance/reserving/: __init__.py  _chain_ladder.py  _common.py
tests/: test_smoke.py
tests/reserving/: test_chain_ladder.py
