[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pystatsinsurance"
version = "0.1.0"
description = "Actuarial and insurance statistical computing for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Hai-Shuo", email = "contact@sgcx.org" },
]
keywords = [
    "actuarial",
    "insurance",
    "loss-models",
    "risk",
    "statistics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://sgcx.org/technology/pystatsinsurance/"
Documentation = "https://sgcx.org/docs/pystatsinsurance/"
Repository = "https://github.com/sgcx-org/pystatsinsurance"
Issues = "https://github.com/sgcx-org/pystatsinsurance/issues"

[tool.hatch.build.targets.wheel]
packages = ["pystatsinsurance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
strict = true
